username spacing fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,7 +100,3 @@
   --sidebar-border: hsl(240 3.7% 15.9%);
   --sidebar-ring: hsl(217.2 91.2% 59.8%);
 }
-
-.cl-userButtonOuterIdentifier {
-  padding-right:2.5rem;
-}
